src/index.css
/* logo code starts */
.logo{
/* background : url("Bitly.svg"); */
position: absolute;
width: 32px;
height: 32px;
left: 16px;
top: 12px;
}
/* logo code ends */

/* dark blue full width banner css code begins */
.rectangle, h1{
  color: white;
  text-align: center;
} 
.rectangle{
position: absolute;
width: 100%;
height: 60px;
left: 0px;
top: 0px;
background: #023044;
}
/* dark blue full width css banner code ends */

/* light blue horizontal rectangle code start, located on the left side of the site */
.blueRect{
position: absolute;
width: 150px;
height: 90%;
left: 10px;
top: 69px;
background: #F2F8FC;
padding-top: 40px;
}
/* light blue horizontal rectangle code ends */


/* get post patch delete button css code begins */
.getbutton {
  background-color: #5DB6A0; 
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: 12px;
  /* left: 142px; */
  left: 440px;
  top: 68px;
  position: absolute;
  outline: none;
  cursor: pointer;
}
.postbutton {
  background-color: #61B3DE; 
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: 12px;
  /* left: 236px; */
  left: 560px;
  top: 68px;
  position: absolute;
  outline: none;
  cursor: pointer;
}
.patchbutton {
  background-color: #E2986B; 
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: 12px;
  /* left: 336px; */
  left: 680px;
  top: 68px;
  position: absolute;
  outline: none;
  cursor: pointer;
}
.deletebutton {
  background-color: #E37F7F; 
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block solid transparent;
  font-size: 16px;
  border-radius: 12px;
  /* left: 445px; */
  left:800px;
  top: 68px;
  position: absolute;
  outline: none;
  cursor: pointer;
}
.container{
 display: flex; /* or inline-flex */
 justify-content:center;
}
/* get post patch delete button css code ends */

/* CENTER CARD WITH INTRO */
.centerCard{
position: fixed;
width: 60%;
max-width: 700px;
min-width: 700px;
height: 500px;
left: 200px;
top: 141px;
background: #F2F8FC;
}

.intro{
position: absolute;
/* left: 173px;
top: 158px; */
left: 40px;
top: 159px;
font-family: ProximaNova;
font-style: normal;
font-weight: normal;
font-size: 16px;
line-height: 20px;
/* text-align: center; */

color: #000000;

}
/* end of centercard */

/* result box code begins*/
.resultsBox{
position: fixed;
width: 320px;
height: 308px;
left: 1100px;
top: 145px;


background: #023044;
}
.resultsBox, h2{
  color:white;
}

/* result box code ends */

/* code for input forms where you can input stuff */
.inputForms{
position: absolute;
left: 400px;
top: 150px;
}
.endpointBox{
    width:100%;
    height: 20px;
}

.authTokenBox{
    width: 100%;
    height: 20px;
}

.keybox{
    width: 100%;
    height: 20px;
}
.Valuebox{
    width: 500px;
    height: 20px;
}
/* code ends */

/* add button code begins */
 .add{
  background-color: #023044; 
  border: none;
  color: white;
  padding: 4px 4px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  border-radius: 3px;
  left: -60px;
  top: 127px;
  position: absolute;
  outline: none;
  cursor: pointer;
}
 /* add button code ends */

 /* submit button code begins */
 .submit{
  background-color: #023044; 
  border: none;
  color: white;
  padding: 4px 4px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  border-radius: 3px;
  left: 760px;
  top: 600px;
  outline: none;
  cursor: pointer;
  position: fixed;
}
 /* submit button code ends */

/* sidenav text and hover code*/
.sidenav a{
  padding: 40px 20px 20px 32px;
  text-decoration: none;
  font-size: 20px;
  color:black;
  display: block;
  font-family: ProximaNova;
}
.sidenav a:hover {
  color:#818181;
}

.Get{
    color: #5DB6A0;
}

.Post{
 color: #61B3DE;
}

.Patch{
 color: #E2986B; 
}

.Delete{
 color: #E37F7F;
}

